--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>drive Game</title>
+    <title>Drive Game</title>
     <link rel="stylesheet" href="style.css">
     
 
