--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="black">
             <img src="webapp/cover.jpg" class="cover" />
             <p class="title">Drive Game</p>
-            <p class="author">Martin Magni</p>
+            <p class="author">Tom Ngosoman</p>
           </div>
         </div>
       </div>
